VS2010版二次开发包SDK_V170621（含C#）厂家/VC6Demo/LEDAPI.h

//通讯设备类型
#define DEVICE_TYPE_COM    0  //串口通讯
#define DEVICE_TYPE_UDP    1  //网络通讯
#define DEVICE_TYPE_485    2  //485通讯
//串口或者485通讯使用得通讯速度(波特率)
#define SBR_57600          0
#define SBR_38400          1
#define SBR_19200          2
#define SBR_9600           3
//是否等待下位机应答，直接发送所有数据
#define NOTIFY_NONE        1
//是否阻塞方式；是则等到发送完成或者超时，才返回；否则立即返回
#define NOTIFY_BLOCK       2
//是否将发送结果以Windows窗体消息方式送到调用得应用
#define NOTIFY_EVENT       4
#define R_DEVICE_READY     0
#define R_DEVICE_INVALID   -1
#define R_DEVICE_BUSY      -2
#define R_FONTSET_INVALID  -3
#define R_DLL_INIT_IVALID  -4
#define R_IGNORE_RESPOND   -5
//Chapter和Leaf中，播放时间控制
#define WAIT_USE_TIME      0  //按照指定的时间长度播放，到时间就切到下一个
#define WAIT_CHILD         1  //等待子项目的播放，如果到了指定的时间长度，而子项目还没有播完，则等待播完
#define V_FALSE            0
#define V_TRUE             1
#define COLOR_MODE_DOUBLE            2  //双色
#define COLOR_MODE_THREE             3  //无灰度全彩
#define COLOR_MODE_FULLCOLOR         4  //全彩
//显示数据命令
#define ROOT_UPDATE            0x13  //更新下位机程序
#define ROOT_FONTSET           0x14  //下载字库
#define ROOT_PLAY              0x21  //节目数据，保存到RAM，掉电丢失
#define ROOT_DOWNLOAD          0x22  //节目数据，保存到Flash
#define ROOT_PLAY_CHAPTER      0x23  //插入或者更新某一节目
#define ROOT_PLAY_REGION       0x25  //插入或者更新某一分区
#define ROOT_PLAY_LEAF         0x27  //插入或者更新某一页面
#define ROOT_PLAY_OBJECT       0x29  //插入或者更新某一对象
#define ACTMODE_INSERT         0  //插入操作
#define ACTMODE_REPLACE        1  //替换操作
//RAM节目播放
#define ROOT_SURVIVE_ALWAYS    -1
//Windows字体类型定义
#define WFS_NONE               0x0   //普通样式
#define WFS_BOLD               0x01  //粗体
#define WFS_ITALIC             0x02  //斜体
#define WFS_UNDERLINE          0x04  //下划线
#define WFS_STRIKEOUT          0x08  //删除线
//流控制常量
#define FLOW_NONE          0
#define FLOW_RTS_CTS       1
//下位机应答标识
#define LM_RX_COMPLETE         1
#define LM_TX_COMPLETE         2
#define LM_RESPOND             3
#define LM_TIMEOUT             4
#define LM_NOTIFY              5
#define LM_PARAM               6
#define LM_TX_PROGRESS         7
#define LM_RX_PROGRESS         8
#define RESULT_FLASH           0xff
//电源开关状态
#define LED_POWER_ON       1
#define LED_POWER_OFF      0
//内码文字大小
#define FONT_SET_16        0      //16点阵字符
#define FONT_SET_24        1      //24点阵字符
  
//正计时、倒计时type参数
#define CT_COUNTUP         0      //正计时
#define CT_COUNTDOWN       1      //倒计时
//正计时、倒计时format参数
#define CF_HNS             0      //时分秒（相对值）
#define CF_HN              1      //时分（相对值）
#define CF_NS              2      //分秒（相对值）
#define CF_H               3      //时（相对值）
#define CF_N               4      //分（相对值）
#define CF_S               5      //秒（相对值）
#define CF_DAY             6      //天数（绝对数量）
#define CF_HOUR            7      //小时数（绝对数量）
#define CF_MINUTE          8      //分钟数（绝对数量）
#define CF_SECOND          9      //秒数（绝对数量）
//模拟时钟边框形状
#define SHAPE_RECTANGLE    0      //方形
#define SHAPE_ROUNDRECT    1      //圆角方形
#define SHAPE_CIRCLE       2      //圆形
//命令代码定义
#define PKC_RESPOND               3
#define PKC_QUERY                 4
#define PKC_OVERFLOW              5
#define PKC_ADJUST_TIME           6
#define PKC_GET_PARAM             7
#define PKC_SET_PARAM             8
#define PKC_GET_POWER             9
#define PKC_SET_POWER             10
#define PKC_GET_BRIGHT            11
#define PKC_SET_BRIGHT            12
#define PKC_COM_TRANSFER          21
#define PKC_GET_POWER_SCHEDULE    60
#define PKC_SET_POWER_SCHEDULE    61
#define PKC_GET_BRIGHT_SCHEDULE   62
#define PKC_SET_BRIGHT_SCHEDULE   63
#define PKC_NOTIFY                100
#define PKC_MODIFY_IP             7654
#define PKC_MODIFY_MAC            7655
#define NOTIFY_BUFFER_LEN		  512
typedef struct TIMESTAMP{
  long   time;
  long   date;
}TTimeStamp, *PTimeStamp;
typedef struct DEVICE_PARAM{
  WORD  devType;
  WORD  comSpeed;
  WORD  comPort;
  WORD  comFlow;
  WORD  locPort;
  WORD  rmtPort;
  WORD  srcAddr;
  WORD  dstAddr;
  char  rmtHost[16];
  DWORD txTimeo;   //发送后等待应答时间 ====超时时间应为txTimeo*txRepeat
  DWORD txRepeat;  //失败重发次数
  DWORD txMovewin; //划动窗口
  DWORD key;
  long  pkpLength; //数据包大小
}TDeviceParam, *PDeviceParam;
typedef struct SENDER_PARAM{
  TDeviceParam devParam;
  long  wmHandle;
  long  wmMessage;
  long  wmLParam;
  long  notifyMode;
}TSenderParam, *PSenderParam;
typedef struct NOTIFY_PARAM{
  WORD  Notify;
  WORD  Command;
  long  Result;
  long  Status;
  TSenderParam Param;
  BYTE  Buffer[NOTIFY_BUFFER_LEN];
  DWORD Size;
}TNotifyParam, *PNotifyParam;
typedef struct POWER_SCHEDULE{
  DWORD Enabled;
  DWORD Mode;
  TTimeStamp OpenTime[21];
  TTimeStamp CloseTime[21];
  DWORD Checksum;
}TPowerSchedule, *PPowerSchedule;
typedef struct BRIGHT_SCHEDULE{
  DWORD Enabled;
  BYTE  Bright[24];
  DWORD Checksum;
}TBrightSchedule, *PBrightSchedule;
//动态链接库初始化
long (_stdcall *LED_Startup)(void);
//动态链接库销毁
long (_stdcall *LED_Cleanup)(void);
//校正时间，以当前计算机的系统时间校正控制卡的时钟
long (_stdcall *LED_AdjustTime)(PSenderParam param);
//校正时间扩展，以指定的时间校正控制卡的时钟
long (_stdcall *LED_AdjustTimeEx)(PSenderParam param, LPSYSTEMTIME time);
//设置控制卡电源 value=LED_POWER_ON表示开启电源 value=LED_POWER_OFF表示关闭电源
long (_stdcall *LED_SetPower)(PSenderParam param, long value);
//串口转发数据
long (_stdcall *LED_ComTransfer)(PSenderParam param, BYTE* buffer, DWORD size);
//读取控制卡电源状态
long (_stdcall *LED_GetPower)(PSenderParam param);
//设置控制卡亮度 value取值范围0-7
long (_stdcall *LED_SetBright)(PSenderParam param, long value);
//读取控制卡亮度
long (_stdcall *LED_GetBright)(PSenderParam param);
//设置控制卡的定时开关屏计划
long (_stdcall *LED_SetPowerSchedule)(PSenderParam param, PPowerSchedule value);
//设置控制卡的定时亮度调节计划
long (_stdcall *LED_SetBrightSchedule)(PSenderParam param, PBrightSchedule value);
//读取控制卡的定时亮度调节计划
long (_stdcall *LED_GetBrightSchedule)(PSenderParam param);
//发送节目数据 index为MakeRoot、MakeChapter、MakeRegion、MakeLeaf、MakeObject函数的返回值
long (_stdcall *LED_SendToScreen)(PSenderParam param, long index);
////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////

//获取控制卡应答结果的数据
long (_stdcall *LED_GetNotifyParam)(PNotifyParam notify, long index);
//生成播放数据
//  RootType 为播放类型；=ROOT_PLAY表示更新控制卡RAM中的节目(掉电丢失)；=ROOT_DOWNLOAD表示更新控制卡Flash中的节目(掉电不丢失)
//  ColorMode 为颜色模式；取值为COLOR_MODE_MONO或者COLOR
//  survive 为RAM节目生存时间，在RootType=ROOT_PLAY时有效，当RAM节目播放达到时间后，恢复显示FLASH中的节目
long (_stdcall *MakeRoot)(long RootType, long ColorMode, long survive = ROOT_SURVIVE_ALWAYS);
//生成节目数据，后续需要调用[AddRegion]->[AddLeaf]->[AddObject]->[AddWindows/AddDateTime等]
//  RootType 必须设为ROOT_PLAY_CHAPTER
//  ActionMode 必须设为0
//  ChapterIndex 要更新的节目序号
//  ColorMode 同MakeRoot中的定义
//  time 播放的时间长度
//  wait 等待模式，=WAIT_CHILD，表示当达到播放时间长度时，需要等待子节目播放完成再切换；
//                 =WAIT_USE_TIME，表示当达到播放时间长度时，不等待子节目播放完成，直接切换下一节目
long (_stdcall *MakeChapter)(long RootType, long ActionMode, long ChapterIndex, long ColorMode, DWORD time, WORD wait);
//生成分区，后续需要调用[AddLeaf]->[AddObject]->[AddWindows/AddDateTime等]
//  RootType 必须设为ROOT_PLAY_REGION
//  ActionMode 必须设为0
//  ChapterIndex 要更新的节目序号
//  RegionIndex 要更新的分区序号
//  ColorMode 同MakeRoot中的定义
//  left、top、width、height 左、上、宽度、高度
//  border 流水边框
long (_stdcall *MakeRegion)(long RootType, long ActionMode, long ChapterIndex, long RegionIndex, long ColorMode, long left, long top, long width, long height, long border);
//生成页面，后续需要调用[AddObject]->[AddWindows/AddDateTime等]
//  RootType 必须设为ROOT_PLAY_LEAF
//  ActionMode 必须设为0
//  ChapterIndex 要更新的节目序号
//  RegionIndex 要更新的分区序号
//  LeafIndex 要更新的页面序号
//  ColorMode 同MakeRoot中的定义
//  time 播放的时间长度
//  wait 等待模式，=WAIT_CHILD，表示当达到播放时间长度时，需要等待子节目播放完成再切换；
//                 =WAIT_USE_TIME，表示当达到播放时间长度时，不等待子节目播放完成，直接切换下一页面
long (_stdcall *MakeLeaf)(long RootType, long ActionMode, long ChapterIndex, long RegionIndex, long LeafIndex, long ColorMode, DWORD time, WORD wait);
//添加分区
//  num 节目数据缓冲区编号，是MakeRoot、MakeChapter的返回值
//  left、top、width、height 左、上、宽度、高度
//  border 流水边框
long (_stdcall *AddRegion)(WORD num, long left, long top, long width, long height, long border);
//添加页面
//  num 节目数据缓冲区编号，是MakeRoot、MakeChapter、MakeRegion的返回值
//  time 播放的时间长度
//  wait 等待模式，=WAIT_CHILD，表示当达到播放时间长度时，需要等待子节目播放完成再切换；
//                 =WAIT_USE_TIME，表示当达到播放时间长度时，不等待子节目播放完成，直接切换下一页面
long (_stdcall *AddLeaf)(WORD num, DWORD time, WORD wait); //time为毫秒
//添加图片组播放
//  num 节目数据缓冲区编号，是MakeRoot、MakeChapter、MakeRegion、MakeLeaf、MakeObject的返回值
//  left、top、width、height 左、上、宽度、高度
//  transparent 是否透明 =1表示透明；=0表示不透明
//  border 流水边框(未实现)
long (_stdcall *AddWindows)(WORD num, long left, long top, long width, long height, long transparent, long border);